feat: user activation endpoint
