# cmd/api/auth.go
@@ -14,6 +14,10 @@ type RegisterUserPayload struct {
 	Email    string `json:"email" validate:"required,email,max=255"`
 	Password string `json:"password" validate:"required,min=3,max=72"`
 }
+type UserWithToken struct {
+	*store.User
+	Token string `json:"token"`
+}
 
 // registerUserHandler godoc
 //
@@ -30,7 +34,7 @@ type RegisterUserPayload struct {
 func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload RegisterUserPayload
 
-	if err := readJSON(w, r, payload); err != nil {
+	if err := readJSON(w, r, &payload); err != nil {
 		app.badRequestResponse(w, r, err)
 		return
 	}
@@ -69,9 +73,13 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 		}
 		return
 	}
-	//mail
+	userWithToken := UserWithToken{
+		User:  user,
+		Token: plainToken,
+	}
+	//TODO: mail
 
-	if err := jsonResponse(w, http.StatusCreated, nil); err != nil {
+	if err := jsonResponse(w, http.StatusCreated, userWithToken); err != nil {
 		app.internalServerError(w, r, err)
 	}
 }
